serving html by using fs module to read index html

--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
 </head>
 <body>
 	<div class="jumbotron">
-		<h1 class="text-center">My Favorite Things</h1>
+		<h1 class="text-center">Interview Prep</h1>
 	</div>
 	<div class="container">
 		<div class="col-sm-6 col-sm-offset-3">
-				<h2>Here are some of my favorite things!</h2>
+				<h2>Here are the topics for interview preparation</h2>
 				<ul>
-                    <li>Algorithms</li>
-                    <li>Data Structures</li>
-					<li>JavaScript</li>
-					<li>HTML</li>
-					<li>CSS</li>
+                    <li><a href="">Algorithms</a></li>
+                    <li><a href="">Data Structures</a></li>
+					<li><a href="">JavaScript</a></li>
+					<li><a href="">HTML</a></li>
+					<li><a href="">CSS</a></li>
 				</ul>
 		</div>
 	</div>
